Fixing dark mode
Again...

--- a/src/components/styles/style.scss
+++ b/src/components/styles/style.scss
@@ -64,6 +64,9 @@ $gray-800: #3a3f44;
 	.react-datepicker__month-container {
 		background-color: $gray-800;
 	}
+	.popover {
+		background-color: $gray-700;
+	}
 }
 
 [data-theme='dark'] {
